Fix various sizing/spacing issues with event cards (fixes #33)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11594,6 +11594,8 @@ https://flickity.metafizzy.co
   height: 1.5rem; }
   .icon.icon-md {
     height: 2.25rem; }
+  .icon.icon-xl {
+    height: 5rem; }
   .icon.icon-lg {
     height: 3rem; }
   .icon.icon-sm {
